--- a/my-server/package.json
+++ b/my-server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cross-env": "^7.0.3",
     "date-format": "^3.0.0",
     "express": "^4.17.1",
